# tailbiter-fork

./: README.md  pyproject.toml
src/tailbiter/: __main__.py  _ast.py  assembly.py  check_subset.py  codegen.py  compiler.py  desugar.py  exceptions.py  scope.py
tests/: test_simple.py
