[project]
name = "tailbiter"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Stefane Fermigier", email = "sf@fermigier.com" }
]
dependencies = []

readme = "README.md"
requires-python = ">= 3.8"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.3.1",
    "coverage~=7.2.7",
]

[tool.hatch.metadata]
allow-direct-references = true


# Poetry configuration

[tool.poetry]
name = "tailbiter"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
readme = "README.md"
packages = [
    { include = "tailbiter", from = "src" },
]

[tool.poetry.scripts]
tailbiter = "tailbiter.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"
pytest = "^7.3.1"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
